<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toybox.lucasrezende.dcc196_controle_feira_do_livro.Formularios.CadastroLivro">


    <TextView
        android:id="@+id/txtNomeLivro"
        android:layout_width="369dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/cadastro_de_livro"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/ano"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEditora"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtEditora"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editora"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/nome_cadastro"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeLivro" />

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="356dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
