<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toybox.lucasrezende.dcc196_controle_feira_do_livro.DetalhesParticipante">

    <TextView
        android:id="@+id/txtParticipante"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/nome"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="356dp"
        android:layout_height="44dp"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipante" />

    <TextView
        android:id="@+id/txtLabelSaida"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/saida"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <TextView
        android:id="@+id/txtLabelEntrada"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/entrada"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtSaida"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelSaida"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtEditora"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelEntrada" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toBottomOf="@+id/txtEditora" />

    <TextView
        android:id="@+id/txtEmailParticipante"
        android:layout_width="359dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
